--- a/staging/src/slime.io/slime/modules/lazyload/charts/global-sidecar/templates/cluster-global-sidecar.yaml
+++ b/staging/src/slime.io/slime/modules/lazyload/charts/global-sidecar/templates/cluster-global-sidecar.yaml
@@ -42,7 +42,7 @@ metadata:
 spec:
   ports:
     {{- range $gsSvcPorts }}
-    - name: http-{{ . }}
+    - name: http2-{{ . }}
       port: {{ int . }}
       protocol: TCP
       targetPort: {{ int . }}
@@ -52,6 +52,18 @@ spec:
   sessionAffinity: None
   type: ClusterIP
 {{- end }}
+---
+apiVersion: networking.istio.io/v1beta1
+kind: DestinationRule
+metadata:
+  name: global-sidecar
+  namespace: {{ $clusterGsNamespace }}
+spec:
+  host: global-sidecar.{{ $clusterGsNamespace }}.svc.cluster.local
+  trafficPolicy:
+    connectionPool:
+      http:
+        useClientProtocol: true
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -344,18 +356,11 @@ spec:
 {{- if (ne $f.disableIpv4Passthrough true) }}
                 - match:
                     prefix: /
-                    grpc: {}
-                  route:
-                    cluster: PassthroughCluster
-                    timeout: 0s
-                - match:
-                    prefix: /
                     headers:
                     - name: ':authority'
-                      string_match:
-                        safe_regex:
-                          google_re2: {}
-                          regex: '^(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)(?::([1-9]|[1-9]\d{1,3}|[1-5]\d{4}|6[0-5][0-5][0-3][0-5]))?$'
+                      safe_regex_match:
+                        googleRe2: {}
+                        regex: '^(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)(?::([1-9]|[1-9]\d{1,3}|[1-5]\d{4}|6[0-5][0-5][0-3][0-5]))?$'
                   route:
                     cluster: PassthroughCluster
                     timeout: 0s
@@ -370,11 +375,12 @@ spec:
             - header:
                 key: "Slime-Orig-Dest"
                 value: "%DOWNSTREAM_LOCAL_ADDRESS%"
-              append: true
+              append: false
           {{- if ne $addEnvHeaderViaLua "true" }}
             - header:
                 key: "Slime-Source-Ns"
                 value: "%ENVIRONMENT(POD_NAMESPACE)%"
+              append: false
           {{- end }}
 {{- if eq $addEnvHeaderViaLua "true" }}
     - applyTo: HTTP_FILTER
