--- a/staging/src/slime.io/slime/modules/lazyload/charts/global-sidecar/templates/namespace-global-sidecar.yaml
+++ b/staging/src/slime.io/slime/modules/lazyload/charts/global-sidecar/templates/namespace-global-sidecar.yaml
@@ -41,7 +41,7 @@ metadata:
 spec:
   ports:
     {{- range $gsSvcPorts }}
-    - name: http-{{ . }}
+    - name: http2-{{ . }}
       port: {{ int . }}
       protocol: TCP
       targetPort: {{ int . }}
@@ -51,6 +51,18 @@ spec:
   sessionAffinity: None
   type: ClusterIP
 {{- end }}
+---
+apiVersion: networking.istio.io/v1beta1
+kind: DestinationRule
+metadata:
+  name: global-sidecar
+  namespace: {{ $ns }}
+spec:
+  host: global-sidecar.{{ $ns }}.svc.cluster.local
+  trafficPolicy:
+    connectionPool:
+      http:
+        useClientProtocol: true
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -329,11 +341,11 @@ spec:
             - header:
                 key: "Slime-Orig-Dest"
                 value: "%DOWNSTREAM_LOCAL_ADDRESS%"
-              append: true
+              append: false
             - header:
                 key: "Slime-Source-Ns"
                 value: {{ $ns }}
-              append: true
+              append: false
     - applyTo: VIRTUAL_HOST
       match:
         proxy:
